# AI-Mentor-Hub

./: .env.example  .gitignore  CLAUDE.md  MANUAL_TECNICO.md  README.md  conftest.py  pyproject.toml  requirements.txt  requirements_pip.txt  test_expansion.py
preguntas/: agente_react.txt  agente_sencillo.txt  explica_codigo.txt  rag.txt  reacion_agente.txt
src/: app.py  chromadb_ingestion.py  chromadb_rag_base.py  config.py  google_ingestion_rompe_limite_free.py  guardrails.py  ingestion.py  listar_modelos.py  main.py  rag_base.py  schemas.py
src/contracts/: schemas.py
src/core/: agents.py  exceptions.py  guardrails.py  ingestion.py  rag_base.py  schemas.py  state_manager.py  storage.py
src/tools/: __init__.py  arxiv_search.py  security.py  web_search.py  wikipedia_search.py
support/: listar_modelos.py
tests/: test_agents.py  test_ingestion.py  test_rag.py  test_schemas.py  test_security.py
